--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <version>1.0.0-SNAPSHOT</version>
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <netty.version>4.0.34.Final</netty.version>
         <protobuf.version>2.6.1</protobuf.version>
         <gson.version>2.5</gson.version>
