--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <licenses>
         <license>
             <name>MIT License</name>
-            <url>http://www.opensource.org/licenses/mit-license.php</url>
+            <url>https://raw.githubusercontent.com/msemys/esjc/master/LICENSE</url>
             <distribution>repo</distribution>
         </license>
     </licenses>
