--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: java
 jdk:
 - oraclejdk8
 sudo: true
+script: mvn clean install package
 before_install:
 - sudo apt-get update -qq
 - sudo apt-get install -y wget tar make
