--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,9 @@ before_install:
 - sudo apt-get update -qq
 - sudo apt-get install -y wget tar make
 install:
+- mkdir tools
+- cd tools
 - wget https://github.com/google/protobuf/releases/download/v2.6.1/protobuf-2.6.1.tar.gz
 - tar -xzvf protobuf-2.6.1.tar.gz
 - cd protobuf-2.6.1 && ./configure --prefix=/usr && make && sudo make install
+- cd ../../
