--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,17 @@ sudo: true
 script: mvn clean install package
 before_install:
 - sudo apt-get update -qq
-- sudo apt-get install -y wget tar make
+- sudo apt-get install -y wget tar make openssl
 install:
 - mkdir tools
 - cd tools
+- wget http://download.geteventstore.com/binaries/EventStore-OSS-Ubuntu-14.04-v3.5.0.tar.gz
+- tar -xzvf EventStore-OSS-Ubuntu-14.04-v3.5.0.tar.gz
+- cd EventStore-OSS-Ubuntu-14.04-v3.5.0
+- openssl req -x509 -sha256 -nodes -days 365 -subj "/CN=test.com" -newkey rsa:2048 -keyout domain.pem -out domain.csr
+- openssl pkcs12 -passout pass: -export -inkey domain.pem -in domain.csr -out domain.p12
+- ./run-node.sh --mem-db --stats-period-sec 3000 --ext-tcp-port 7773 --ext-secure-tcp-port 7779 --certificate-file domain.p12 &
+- cd ../
 - wget https://github.com/google/protobuf/releases/download/v2.6.1/protobuf-2.6.1.tar.gz
 - tar -xzvf protobuf-2.6.1.tar.gz
 - cd protobuf-2.6.1 && ./configure --prefix=/usr && make && sudo make install
