--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: java
 jdk:
 - oraclejdk8
 sudo: true
-script: mvn clean install package
+script: mvn clean install
 before_install:
 - sudo apt-get update -qq
 - sudo apt-get install -y wget tar make openssl
