--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <netty.version>4.0.34.Final</netty.version>
         <protobuf.version>2.6.1</protobuf.version>
         <gson.version>2.5</gson.version>
