maintenance: compile protobuf silently

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,5 +18,5 @@ install:
 - cd ../
 - wget https://github.com/google/protobuf/releases/download/v2.6.1/protobuf-2.6.1.tar.gz
 - tar -xzvf protobuf-2.6.1.tar.gz
-- cd protobuf-2.6.1 && ./configure --prefix=/usr && make && sudo make install
+- cd protobuf-2.6.1 && ./configure --prefix=/usr && make > /dev/null 2>&1 && sudo make install > /dev/null 2>&1
 - cd ../../
