--- a/pom.xml
+++ b/pom.xml
@@ -149,7 +149,7 @@
 						</goals>
 						<configuration>
 							<protoSourceRoot>${project.basedir}/src/main/protobuf</protoSourceRoot>
-							<outputDirectory>${project.build.directory}/generated-sources/protobuf</outputDirectory>
+							<outputDirectory>${project.basedir}/src-gen/main/protobuf</outputDirectory>
 							<protocArtifact>com.google.protobuf:protoc:2.6.1:exe:${os.detected.classifier}</protocArtifact>
 						</configuration>
 					</execution>
@@ -167,7 +167,7 @@
                         </goals>
                         <configuration>
                             <sources>
-                                <source>${project.build.directory}/generated-sources/protobuf</source>
+                                <source>${project.basedir}/src-gen/main/protobuf</source>
                             </sources>
                         </configuration>
                     </execution>
