added: eventstore file name variable

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,10 @@ before_install:
 install:
 - mkdir tools
 - cd tools
-- wget http://download.geteventstore.com/binaries/EventStore-OSS-Ubuntu-14.04-v3.9.3.tar.gz
-- tar -xzf EventStore-OSS-Ubuntu-14.04-v3.9.3.tar.gz
-- cd EventStore-OSS-Ubuntu-14.04-v3.9.3
+- export ES_FNAME="EventStore-OSS-Ubuntu-14.04-v3.9.3.tar.gz"
+- wget http://download.geteventstore.com/binaries/$ES_FNAME
+- tar -xzf $ES_FNAME
+- cd ${ES_FNAME%.tar.gz}
 - openssl req -x509 -sha256 -nodes -days 365 -subj "/CN=test.com" -newkey rsa:2048 -keyout domain.pem -out domain.csr
 - openssl pkcs12 -passout "pass:" -export -inkey domain.pem -in domain.csr -out domain.p12
 - ./run-node.sh --mem-db --stats-period-sec 3000 --ext-tcp-port 7773 --ext-secure-tcp-port 7779 --certificate-file domain.p12 > /dev/null &
