--- a/.travis.yml
+++ b/.travis.yml
@@ -9,11 +9,7 @@ before_install:
 install:
 - mkdir tools
 - cd tools
-- mkdir ssl
-- cd ssl
-- openssl req -x509 -sha256 -nodes -days 365 -subj "/CN=localhost" -newkey rsa:2048 -keyout domain.pem -out domain.csr
-- openssl pkcs12 -passout "pass:" -export -inkey domain.pem -in domain.csr -out domain.p12
-- cd ../
+- ../scripts/generate-ssl-cert.sh
 - export ES_FNAME="EventStore-OSS-Ubuntu-14.04-v4.1.0.tar.gz"
 - wget https://eventstore.org/downloads/$ES_FNAME
 - tar -xzf $ES_FNAME
