--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,18 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.github.msemys</groupId>
-    <artifactId>esjc</artifactId>
-    <version>2.5.0-SNAPSHOT</version>
+    <parent>
+        <groupId>no.ks.fiks.pom</groupId>
+        <artifactId>fiks-superpom</artifactId>
+        <version>2.5.1</version>
+    </parent>
+
+    <groupId>no.ks.fiks</groupId>
+    <artifactId>fiks-esjc</artifactId>
+    <version>2.6.0-SNAPSHOT</version>
 
     <name>EventStore Java Client</name>
-    <description>EventStore client for Java 8 that uses Netty for network communication.</description>
-    <url>https://github.com/msemys/esjc</url>
-    <inceptionYear>2016</inceptionYear>
+    <description>EventStore client for Java 8 that uses Netty for network communication. Clone with support for Evenstore v20.X</description>
 
     <licenses>
         <license>
@@ -21,21 +25,6 @@
         </license>
     </licenses>
 
-    <developers>
-        <developer>
-            <id>msemys</id>
-            <name>Mindaugas Šėmys</name>
-            <email>mindaugas.semys@gmail.com</email>
-            <organizationUrl>https://github.com/msemys</organizationUrl>
-        </developer>
-    </developers>
-
-    <scm>
-        <connection>scm:git:git@github.com:msemys/esjc.git</connection>
-        <developerConnection>scm:git:git@github.com:msemys/esjc.git</developerConnection>
-        <url>git@github.com:msemys/esjc.git</url>
-    </scm>
-
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -43,6 +32,8 @@
         <protobuf.version>2.6.1</protobuf.version>
         <gson.version>2.8.8</gson.version>
         <slf4j.version>1.7.32</slf4j.version>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
     </properties>
 
     <dependencies>
