--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
         <gson.version>2.8.8</gson.version>
         <maven-enforcer-plugin.version>3.0.0</maven-enforcer-plugin.version>
         <slf4j.version>1.7.32</slf4j.version>
+        <jacoco-maven-plugin.version>0.8.7</jacoco-maven-plugin.version>
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler.source>1.8</maven.compiler.source>
     </properties>
@@ -221,6 +222,7 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
+                <version>${jacoco-maven-plugin.version}</version>
                 <executions>
                     <execution>
                         <id>prepare-jacoco-agent</id>
